# devops-llm

./: .gitignore  README.md  pyproject.toml
devops_llm/chatbot/: chatbot.py  cli.py  tools.py
devops_llm/config/: .secrets.template.toml  config_loader.py
devops_llm/tests/: test_openai_aliyun_llm.py
src/chatbot/: chatbot.py  cli.py
src/test/: test_litellm_aliyun_llm.py  test_openai_aliyun_llm.py
src/tests/: test_chatbot.py  test_litellm_aliyun_llm.py  test_openai_aliyun_llm.py
tests/: test_litellm_aliyun_llm.py
